@startuml Dominio_Produtos_Lotes
skinparam classAttributeIconSize 0
skinparam classFontSize 13
skinparam classHeaderBackgroundColor #EEEDFE
skinparam classBorderColor #534AB7
skinparam classBackgroundColor #FAFAFA
skinparam arrowColor #534AB7
skinparam stereotypeCBackgroundColor #E1F5EE
skinparam stereotypeABackgroundColor #FAC775
skinparam stereotypeIBackgroundColor #E1F5EE
skinparam packageBackgroundColor #F8F8F8
skinparam packageBorderColor #B4B2A9
skinparam linetype ortho

title Software de Loja — Diagrama de Classes (Produtos e Lotes)

package "Domínio" {
  class Produto {
    - id : int
    - codigoBarras : String
    - nome : String
    - categoria : String
    - precoBase : double
    - stockMinimo : int
    - ativo : boolean
    + getCodigoBarras() : String
    + getStockMinimo() : int
    + isAtivo() : boolean
  }

  class Lote {
    - id : int
    - quantidade : int
    - dataValidade : LocalDate
    - precoVenda : double
    + getProduto() : Produto
    + getDataValidade() : LocalDate
    + getPrecoFinal() : double
    + deduzirUnidade() : void
    + incrementarUnidade() : void
    + temDesconto() : boolean
  }

  class Desconto {
    - percentagem : double
    - dataAplicacao : LocalDate
    - aplicadoPor : Manager
    + getPercentagem() : double
    + getAplicadoPor() : Manager
  }

  ' Relações
  Lote --> Produto : produto
  Lote "0..1" --> "0..1" Desconto : desconto
  Desconto --> Manager : aplicadoPor
}
@enduml